--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "axios": "^1.7.2",
+    "mysql2": "^3.10.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
